<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView_soyad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/soyad"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_ad" />

    <TextView
        android:id="@+id/textView_ad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/ad"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_ad"
        android:layout_width="205dp"
        android:layout_height="49dp"
        android:layout_marginStart="108dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@id/textView_ad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView_ad" />

    <EditText
        android:id="@+id/editText_soyad"
        android:layout_width="205dp"
        android:layout_height="43dp"
        android:layout_marginStart="108dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@id/textView_soyad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView_soyad" />

    <TextView
        android:id="@+id/textView_dt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/dt"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_soyad" />

    <EditText
        android:id="@+id/editText_dt"
        android:layout_width="210dp"
        android:layout_height="46dp"
        android:layout_marginStart="108dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintBaseline_toBaselineOf="@id/textView_dt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView_dt" />

    <TextView
        android:id="@+id/textView_dy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/dy"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_dt" />

    <Spinner
        android:id="@+id/spinner_dy"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/test"
        android:entries="@array/dy_array"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.253"
        app:layout_constraintStart_toEndOf="@+id/textView_dy"
        app:layout_constraintTop_toBottomOf="@+id/editText_dt"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/spinner_uni"
        android:layout_width="205dp"
        android:layout_height="41dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/test"
        android:entries="@array/uni_array"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView_uni"
        app:layout_constraintTop_toBottomOf="@+id/spinner_dy"
        app:layout_constraintVertical_bias="0.002" />

    <Spinner
        android:id="@+id/spinner_bolum"
        android:layout_width="198dp"
        android:layout_height="53dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/test"
        android:entries="@array/bolum_array"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView_bolum"
        app:layout_constraintTop_toBottomOf="@+id/spinner_uni"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView_uni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="60dp"
        android:text="@string/uni"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_dy" />

    <TextView
        android:id="@+id/textView_bolum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="64dp"
        android:text="@string/bolum"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_uni" />

    <Button
        android:id="@+id/button"
        android:layout_width="186dp"
        android:layout_height="55dp"
        android:onClick="butonaBasildi"
        android:text="@string/buton"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.569"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_bolum"
        app:layout_constraintVertical_bias="0.067" />
</androidx.constraintlayout.widget.ConstraintLayout>